<resources>
    <string name="app_name">LoginPage</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_conf_password">Confirm Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="lbl_change_password_btn">Change Password</string>
    <string name="todo">TODO</string>
    <string name="lbl_forget_password">Forgot Password</string>
    <string name="lbl_login_btn">LOGIN</string>
    <string name="lbl_signup_btn">SIGN UP</string>
    <string name="lbl_full_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="txt_home_page">WELCOME HOME!!!</string>
</resources>