<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:onClick="hideKeyboard"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/ft_logo"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_full_name"
            android:layout_marginTop="15dp"
            android:inputType="textCapWords"
            android:layout_marginHorizontal="50dp"
            android:padding="20dp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/lbl_last_name"
            android:inputType="textCapWords"
            android:padding="20dp" />

        <EditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:padding="20dp" />

        <EditText
            android:id="@+id/mobile_number"
            android:hint="@string/lbl_mobile_number"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:padding="20dp" />

        <EditText
            android:id="@+id/password"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:inputType="textPassword"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/confirm_password"
            android:hint="@string/hint_conf_password"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="20dp"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/lbl_signup_btn"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>