<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:onClick="hideKeyboard"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/ft_logo"
        android:contentDescription="@string/todo"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="70dp"
        android:hint="@string/hint_email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginHorizontal="50dp"/>

    <TextView
        android:id="@+id/btn_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey"
        android:text="@string/lbl_forget_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login_btn"
        android:layout_margin="50dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>