<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:onClick="hideKeyboard"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_gravity="center"
        android:background="@drawable/ft_logo"
        android:contentDescription="@string/todo" />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_email"
        android:padding="20dp" />

    <EditText
        android:id="@+id/et_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_password"
        android:ems="15"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp" />
    <EditText
        android:id="@+id/et_conf_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_conf_password"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"/>
    <Button
        android:id="@+id/btn_change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_change_password_btn"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>